tests/invalid/zinc2mer_lib.err_exp
zinc2mer_lib.m:035: In clause for `min_domsize_min_split(ia, oa)':
zinc2mer_lib.m:035:   in the return value of call to function
zinc2mer_lib.m:035:   `zinc2mer_lib.min_split_var'/1:
zinc2mer_lib.m:035:   mode error: variable `BranchConstraints' has
zinc2mer_lib.m:035:   instantiatedness `free',
zinc2mer_lib.m:035:   expected instantiatedness was `any'.
zinc2mer_lib.m:037: In `min_split_var'(in(any)) = in(any):
zinc2mer_lib.m:037:   error: determinism declaration not satisfied.
zinc2mer_lib.m:037:   Declared `det', inferred `semidet'.
zinc2mer_lib.m:045:   Unification of `BranchConstraints' and `list.[]' can
zinc2mer_lib.m:045:   fail.
For more information, recompile with `-E'.
